--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/app/ChoixApp.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/app/ChoixApp.fxml
@@ -4,10 +4,21 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@../agent/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.app.ChoixAppController">
-   <children>
-      <Label alignment="CENTER" layoutX="147.0" layoutY="51.0" prefHeight="19.0" prefWidth="303.0" scaleX="2.0" scaleY="2.0" scaleZ="2.0" text="Choisissez l'application à lancer" />
-      <Button fx:id="buttonAgent" layoutX="127.0" layoutY="187.0" mnemonicParsing="false" onAction="#ouvrirAppAgent" prefWidth="125.0" text="Agent" />
-      <Button fx:id="buttonResponsable" layoutX="346.0" layoutY="187.0" mnemonicParsing="false" onAction="#ouvrirAppResponsable" prefHeight="29.0" prefWidth="125.0" text="Responsable" />
-   </children>
+<AnchorPane prefHeight="400.0" prefWidth="600.0"
+	stylesheets="@../agent/style.css"
+	xmlns="http://javafx.com/javafx/11.0.1"
+	xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="fr.iut.groupemaxime.gestioncarsat.app.ChoixAppController">
+	<children>
+		<Label alignment="CENTER" layoutX="147.0" layoutY="51.0"
+			prefHeight="19.0" prefWidth="303.0" scaleX="2.0" scaleY="2.0"
+			scaleZ="2.0" text="Choisissez l'application à lancer" />
+		<Button fx:id="buttonAgent" layoutX="127.0" layoutY="187.0"
+			mnemonicParsing="false" onAction="#ouvrirAppAgent" prefWidth="125.0"
+			text="Agent" />
+		<Button fx:id="buttonResponsable" layoutX="346.0"
+			layoutY="187.0" mnemonicParsing="false"
+			onAction="#ouvrirAppResponsable" prefHeight="29.0" prefWidth="125.0"
+			text="Responsable" />
+	</children>
 </AnchorPane>
