--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/responsable/view/RootLayout.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/responsable/view/RootLayout.fxml
@@ -11,94 +11,125 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="650.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.responsable.view.RootLayoutController">
-   <top>
-      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: Gainsboro;" BorderPane.alignment="CENTER">
-         <children>
-            <ImageView fx:id="banniereCarsat" fitHeight="69.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-               <viewport>
-                  <Rectangle2D height="69.0" width="200.0" />
-               </viewport>
-               <HBox.margin>
-                  <Insets left="50.0" top="15.0" />
-               </HBox.margin>
-            </ImageView>
-            <Label text="Mission sélectionnée : ">
-               <HBox.margin>
-                  <Insets left="250.0" right="5.0" top="40.0" />
-               </HBox.margin>
-            </Label>
-            <Label fx:id="labelMissionSelectionnee" text="Aucune">
-               <HBox.margin>
-                  <Insets top="40.0" />
-               </HBox.margin>
-            </Label>
-         </children>
-      </HBox>
-   </top>
-   <left>
-      <GridPane fx:id="gridRoot" BorderPane.alignment="CENTER">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
-            <ColumnConstraints hgrow="SOMETIMES" prefWidth="1100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <VBox fx:id="boxMenu" prefHeight="200.0" prefWidth="150.0" style="-fx-border-color: grey;" stylesheets="@../../agent/menu.css">
-               <children>
-                  <VBox id="hov" fx:id="boxOM" prefHeight="100.0" prefWidth="150.0" style="-fx-border-color: grey; -fx-border-width: 0 0 1 0;" stylesheets="@../../agent/hover.css">
-                     <children>
-                        <ImageView fx:id="imageOM" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-                           <VBox.margin>
-                              <Insets left="55.0" top="10.0" />
-                           </VBox.margin>
-                        </ImageView>
-                        <Label alignment="CENTER" prefHeight="64.0" prefWidth="150.0" text="Ordres de mission">
-                           <padding>
-                              <Insets bottom="15.0" top="15.0" />
-                           </padding>
-                        </Label>
-                     </children>
-                  </VBox>
-                  <VBox id="hov" fx:id="boxFM" prefHeight="100.0" prefWidth="150.0" style="-fx-border-color: grey; -fx-border-width: 0 0 1 0;" stylesheets="@../../agent/hover.css">
-                     <children>
-                        <ImageView fx:id="imageFM" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-                           <VBox.margin>
-                              <Insets left="55.0" top="10.0" />
-                           </VBox.margin>
-                        </ImageView>
-                        <Label alignment="CENTER" prefHeight="54.0" prefWidth="150.0" text="Frais de mission">
-                           <padding>
-                              <Insets bottom="15.0" top="15.0" />
-                           </padding>
-                        </Label>
-                     </children>
-                  </VBox>
-                  <VBox id="hov" fx:id="boxHT" prefHeight="100.0" prefWidth="150.0" style="-fx-border-color: grey; -fx-border-width: 0 0 1 0;" stylesheets="@../../agent/hover.css">
-                     <children>
-                        <ImageView fx:id="imageHT" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-                           <VBox.margin>
-                              <Insets left="55.0" top="10.0" />
-                           </VBox.margin>
-                        </ImageView>
-                        <Label alignment="CENTER" prefHeight="52.0" prefWidth="150.0" text="Horaires de travail" />
-                     </children>
-                  </VBox>
-                  <VBox id="hov" fx:id="boxParam" onMouseClicked="#modifierOptions" prefHeight="100.0" prefWidth="150.0" style="-fx-border-color: grey; -fx-border-width: 0 0 1 0;" stylesheets="@../../agent/hover.css">
-                     <children>
-                        <ImageView fx:id="imageParametre" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-                           <VBox.margin>
-                              <Insets left="55.0" top="10.0" />
-                           </VBox.margin>
-                        </ImageView>
-                        <Label alignment="CENTER" prefHeight="53.0" prefWidth="150.0" text="Paramètres" />
-                     </children>
-                  </VBox>
-               </children>
-            </VBox>
-         </children>
-      </GridPane>
-   </left>
+<BorderPane prefHeight="650.0" prefWidth="1200.0"
+	xmlns="http://javafx.com/javafx/11.0.1"
+	xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="fr.iut.groupemaxime.gestioncarsat.responsable.view.RootLayoutController">
+	<top>
+		<HBox prefHeight="100.0" prefWidth="200.0"
+			style="-fx-background-color: Gainsboro;"
+			BorderPane.alignment="CENTER">
+			<children>
+				<ImageView fx:id="banniereCarsat" fitHeight="69.0"
+					fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+					<viewport>
+						<Rectangle2D height="69.0" width="200.0" />
+					</viewport>
+					<HBox.margin>
+						<Insets left="50.0" top="15.0" />
+					</HBox.margin>
+				</ImageView>
+				<Label text="Mission sélectionnée : ">
+					<HBox.margin>
+						<Insets left="250.0" right="5.0" top="40.0" />
+					</HBox.margin>
+				</Label>
+				<Label fx:id="labelMissionSelectionnee" text="Aucune">
+					<HBox.margin>
+						<Insets top="40.0" />
+					</HBox.margin>
+				</Label>
+			</children>
+		</HBox>
+	</top>
+	<left>
+		<GridPane fx:id="gridRoot" BorderPane.alignment="CENTER">
+			<columnConstraints>
+				<ColumnConstraints hgrow="SOMETIMES"
+					minWidth="10.0" prefWidth="150.0" />
+				<ColumnConstraints hgrow="SOMETIMES"
+					prefWidth="1100.0" />
+			</columnConstraints>
+			<rowConstraints>
+				<RowConstraints minHeight="10.0" prefHeight="30.0"
+					vgrow="SOMETIMES" />
+			</rowConstraints>
+			<children>
+				<VBox fx:id="boxMenu" prefHeight="200.0" prefWidth="150.0"
+					style="-fx-border-color: grey;" stylesheets="@../../agent/menu.css">
+					<children>
+						<VBox id="hov" fx:id="boxOM" prefHeight="100.0"
+							prefWidth="150.0"
+							style="-fx-border-color: grey; -fx-border-width: 0 0 1 0;"
+							stylesheets="@../../agent/hover.css">
+							<children>
+								<ImageView fx:id="imageOM" fitHeight="40.0"
+									fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+									<VBox.margin>
+										<Insets left="55.0" top="10.0" />
+									</VBox.margin>
+								</ImageView>
+								<Label alignment="CENTER" prefHeight="64.0"
+									prefWidth="150.0" text="Ordres de mission">
+									<padding>
+										<Insets bottom="15.0" top="15.0" />
+									</padding>
+								</Label>
+							</children>
+						</VBox>
+						<VBox id="hov" fx:id="boxFM" prefHeight="100.0"
+							prefWidth="150.0"
+							style="-fx-border-color: grey; -fx-border-width: 0 0 1 0;"
+							stylesheets="@../../agent/hover.css">
+							<children>
+								<ImageView fx:id="imageFM" fitHeight="40.0"
+									fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+									<VBox.margin>
+										<Insets left="55.0" top="10.0" />
+									</VBox.margin>
+								</ImageView>
+								<Label alignment="CENTER" prefHeight="54.0"
+									prefWidth="150.0" text="Frais de mission">
+									<padding>
+										<Insets bottom="15.0" top="15.0" />
+									</padding>
+								</Label>
+							</children>
+						</VBox>
+						<VBox id="hov" fx:id="boxHT" prefHeight="100.0"
+							prefWidth="150.0"
+							style="-fx-border-color: grey; -fx-border-width: 0 0 1 0;"
+							stylesheets="@../../agent/hover.css">
+							<children>
+								<ImageView fx:id="imageHT" fitHeight="40.0"
+									fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+									<VBox.margin>
+										<Insets left="55.0" top="10.0" />
+									</VBox.margin>
+								</ImageView>
+								<Label alignment="CENTER" prefHeight="52.0"
+									prefWidth="150.0" text="Horaires de travail" />
+							</children>
+						</VBox>
+						<VBox id="hov" fx:id="boxParam"
+							onMouseClicked="#modifierOptions" prefHeight="100.0"
+							prefWidth="150.0"
+							style="-fx-border-color: grey; -fx-border-width: 0 0 1 0;"
+							stylesheets="@../../agent/hover.css">
+							<children>
+								<ImageView fx:id="imageParametre" fitHeight="40.0"
+									fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+									<VBox.margin>
+										<Insets left="55.0" top="10.0" />
+									</VBox.margin>
+								</ImageView>
+								<Label alignment="CENTER" prefHeight="53.0"
+									prefWidth="150.0" text="Paramètres" />
+							</children>
+						</VBox>
+					</children>
+				</VBox>
+			</children>
+		</GridPane>
+	</left>
 </BorderPane>
