--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Agent.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Agent.fxml
@@ -9,110 +9,139 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.AgentController">
-   <children>
-      <GridPane fx:id="grilleTop" layoutX="-1.0" layoutY="59.0" prefHeight="491.0" prefWidth="700.0" stylesheets="@../style.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="59.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="470.0" minWidth="10.0" prefWidth="300.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="435.0" minWidth="10.0" prefWidth="300.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="129.0" minHeight="0.0" prefHeight="28.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="334.0" minHeight="0.0" prefHeight="33.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="354.0" minHeight="10.0" prefHeight="82.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="354.0" minHeight="0.0" prefHeight="66.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="354.0" minHeight="10.0" prefHeight="66.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Label stylesheets="@../style.css" text="Nom :">
-               <GridPane.margin>
-                  <Insets left="10.0" />
-               </GridPane.margin>
-            </Label>
-            <TextField fx:id="nomTextField" maxWidth="150.0" prefHeight="25.0" prefWidth="126.0">
-               <GridPane.margin>
-                  <Insets left="200.0" />
-               </GridPane.margin>
-            </TextField>
-            <Label text="Prénom :" GridPane.columnIndex="1">
-               <GridPane.margin>
-                  <Insets left="25.0" />
-               </GridPane.margin>
-            </Label>
-            <TextField fx:id="prenomTextField" maxWidth="150.0" GridPane.columnIndex="1">
-               <GridPane.margin>
-                  <Insets left="155.0" />
-               </GridPane.margin>
-            </TextField>
-            <Label text="Fonction :" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets left="10.0" />
-               </GridPane.margin>
-            </Label>
-            <TextField fx:id="fonctionTextField" maxWidth="150.0" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets left="200.0" />
-               </GridPane.margin>
-            </TextField>
-            <Label text="N° CAPSSA :" GridPane.columnIndex="1" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets left="25.0" />
-               </GridPane.margin>
-            </Label>
-            <TextField fx:id="numCAPSSATextField" maxWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets left="155.0" />
-               </GridPane.margin>
-            </TextField>
-            <Label text="Résidence Administrative :" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets left="10.0" />
-               </GridPane.margin>
-            </Label>
-            <TextField fx:id="residenceAdminTextField" maxWidth="150.0" prefHeight="25.0" prefWidth="161.0" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets left="200.0" />
-               </GridPane.margin>
-            </TextField>
-            <Label text="Coefficient :" GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets left="25.0" />
-               </GridPane.margin>
-            </Label>
-            <TextField fx:id="coefficientTextField" maxWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets left="155.0" />
-               </GridPane.margin>
-            </TextField>
-            <Label text="Unité de travail :" GridPane.rowIndex="3">
-               <GridPane.margin>
-                  <Insets left="10.0" />
-               </GridPane.margin>
-            </Label>
-            <TextField fx:id="uniteTavailTextField" maxWidth="150.0" GridPane.rowIndex="3">
-               <GridPane.margin>
-                  <Insets left="200.0" />
-               </GridPane.margin>
-            </TextField>
-            <Label text="Code analytique :" GridPane.columnIndex="1" GridPane.rowIndex="3">
-               <GridPane.margin>
-                  <Insets left="25.0" />
-               </GridPane.margin>
-            </Label>
-            <TextField fx:id="codeAnalytiqueTextField" maxWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
-               <GridPane.margin>
-                  <Insets left="155.0" />
-               </GridPane.margin>
-            </TextField>
-            <Button fx:id="suivantBtn" mnemonicParsing="false" onAction="#passerATypeOM" prefHeight="30.0" prefWidth="100.0" text="Suivant &gt;&gt;" GridPane.columnIndex="1" GridPane.rowIndex="4">
-               <GridPane.margin>
-                  <Insets bottom="8.0" left="160.0" />
-               </GridPane.margin>
-            </Button>
-         </children>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-      </GridPane>
-   </children>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity"
+	minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0"
+	prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.1"
+	xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.AgentController">
+	<children>
+		<GridPane fx:id="grilleTop" layoutX="-1.0" layoutY="59.0"
+			prefHeight="491.0" prefWidth="700.0" stylesheets="@../style.css"
+			AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+			AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="59.0">
+			<columnConstraints>
+				<ColumnConstraints hgrow="SOMETIMES"
+					maxWidth="470.0" minWidth="10.0" prefWidth="300.0" />
+				<ColumnConstraints hgrow="SOMETIMES"
+					maxWidth="435.0" minWidth="10.0" prefWidth="300.0" />
+			</columnConstraints>
+			<rowConstraints>
+				<RowConstraints maxHeight="129.0" minHeight="0.0"
+					prefHeight="28.0" vgrow="SOMETIMES" />
+				<RowConstraints maxHeight="334.0" minHeight="0.0"
+					prefHeight="33.0" vgrow="SOMETIMES" />
+				<RowConstraints maxHeight="354.0" minHeight="10.0"
+					prefHeight="82.0" vgrow="SOMETIMES" />
+				<RowConstraints maxHeight="354.0" minHeight="0.0"
+					prefHeight="66.0" vgrow="SOMETIMES" />
+				<RowConstraints maxHeight="354.0" minHeight="10.0"
+					prefHeight="66.0" vgrow="SOMETIMES" />
+			</rowConstraints>
+			<children>
+				<Label stylesheets="@../style.css" text="Nom :">
+					<GridPane.margin>
+						<Insets left="10.0" />
+					</GridPane.margin>
+				</Label>
+				<TextField fx:id="nomTextField" maxWidth="150.0"
+					prefHeight="25.0" prefWidth="126.0">
+					<GridPane.margin>
+						<Insets left="200.0" />
+					</GridPane.margin>
+				</TextField>
+				<Label text="Prénom :" GridPane.columnIndex="1">
+					<GridPane.margin>
+						<Insets left="25.0" />
+					</GridPane.margin>
+				</Label>
+				<TextField fx:id="prenomTextField" maxWidth="150.0"
+					GridPane.columnIndex="1">
+					<GridPane.margin>
+						<Insets left="155.0" />
+					</GridPane.margin>
+				</TextField>
+				<Label text="Fonction :" GridPane.rowIndex="1">
+					<GridPane.margin>
+						<Insets left="10.0" />
+					</GridPane.margin>
+				</Label>
+				<TextField fx:id="fonctionTextField" maxWidth="150.0"
+					GridPane.rowIndex="1">
+					<GridPane.margin>
+						<Insets left="200.0" />
+					</GridPane.margin>
+				</TextField>
+				<Label text="N° CAPSSA :" GridPane.columnIndex="1"
+					GridPane.rowIndex="1">
+					<GridPane.margin>
+						<Insets left="25.0" />
+					</GridPane.margin>
+				</Label>
+				<TextField fx:id="numCAPSSATextField" maxWidth="150.0"
+					GridPane.columnIndex="1" GridPane.rowIndex="1">
+					<GridPane.margin>
+						<Insets left="155.0" />
+					</GridPane.margin>
+				</TextField>
+				<Label text="Résidence Administrative :" GridPane.rowIndex="2">
+					<GridPane.margin>
+						<Insets left="10.0" />
+					</GridPane.margin>
+				</Label>
+				<TextField fx:id="residenceAdminTextField"
+					maxWidth="150.0" prefHeight="25.0" prefWidth="161.0"
+					GridPane.rowIndex="2">
+					<GridPane.margin>
+						<Insets left="200.0" />
+					</GridPane.margin>
+				</TextField>
+				<Label text="Coefficient :" GridPane.columnIndex="1"
+					GridPane.rowIndex="2">
+					<GridPane.margin>
+						<Insets left="25.0" />
+					</GridPane.margin>
+				</Label>
+				<TextField fx:id="coefficientTextField" maxWidth="150.0"
+					GridPane.columnIndex="1" GridPane.rowIndex="2">
+					<GridPane.margin>
+						<Insets left="155.0" />
+					</GridPane.margin>
+				</TextField>
+				<Label text="Unité de travail :" GridPane.rowIndex="3">
+					<GridPane.margin>
+						<Insets left="10.0" />
+					</GridPane.margin>
+				</Label>
+				<TextField fx:id="uniteTavailTextField" maxWidth="150.0"
+					GridPane.rowIndex="3">
+					<GridPane.margin>
+						<Insets left="200.0" />
+					</GridPane.margin>
+				</TextField>
+				<Label text="Code analytique :" GridPane.columnIndex="1"
+					GridPane.rowIndex="3">
+					<GridPane.margin>
+						<Insets left="25.0" />
+					</GridPane.margin>
+				</Label>
+				<TextField fx:id="codeAnalytiqueTextField"
+					maxWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+					<GridPane.margin>
+						<Insets left="155.0" />
+					</GridPane.margin>
+				</TextField>
+				<Button fx:id="suivantBtn" mnemonicParsing="false"
+					onAction="#passerATypeOM" prefHeight="30.0" prefWidth="100.0"
+					text="Suivant &gt;&gt;" GridPane.columnIndex="1"
+					GridPane.rowIndex="4">
+					<GridPane.margin>
+						<Insets bottom="8.0" left="160.0" />
+					</GridPane.margin>
+				</Button>
+			</children>
+			<padding>
+				<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+			</padding>
+		</GridPane>
+	</children>
 </AnchorPane>
