--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/MenuAgent.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/MenuAgent.fxml
@@ -8,26 +8,33 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minWidth="-Infinity" prefHeight="550.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.MenuAgentController">
-   <children>
-      <VBox prefHeight="550.0" prefWidth="350.0">
-         <children>
-            <Label alignment="CENTER" prefHeight="50.0" prefWidth="361.0" text="Liste des ordres de mission" textAlignment="CENTER">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Label>
-            <ScrollPane hbarPolicy="NEVER" minWidth="-Infinity" prefHeight="430.0" prefWidth="273.0">
-               <content>
-                  <VBox fx:id="listeOmVBox" />
-               </content>
-            </ScrollPane>
-            <Button mnemonicParsing="false" onAction="#creerNouveauOm" prefHeight="29.0" prefWidth="163.0" stylesheets="@../style.css" text="Créer une mission">
-               <VBox.margin>
-                  <Insets left="90.0" top="20.0" />
-               </VBox.margin>
-            </Button>
-         </children>
-      </VBox>
-   </children>
+<AnchorPane minWidth="-Infinity" prefHeight="550.0"
+	prefWidth="350.0" xmlns="http://javafx.com/javafx/11.0.1"
+	xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.MenuAgentController">
+	<children>
+		<VBox prefHeight="550.0" prefWidth="350.0">
+			<children>
+				<Label alignment="CENTER" prefHeight="50.0" prefWidth="361.0"
+					text="Liste des ordres de mission" textAlignment="CENTER">
+					<font>
+						<Font name="System Bold" size="18.0" />
+					</font>
+				</Label>
+				<ScrollPane hbarPolicy="NEVER" minWidth="-Infinity"
+					prefHeight="430.0" prefWidth="273.0">
+					<content>
+						<VBox fx:id="listeOmVBox" />
+					</content>
+				</ScrollPane>
+				<Button mnemonicParsing="false" onAction="#creerNouveauOm"
+					prefHeight="29.0" prefWidth="163.0" stylesheets="@../style.css"
+					text="Créer une mission">
+					<VBox.margin>
+						<Insets left="90.0" top="20.0" />
+					</VBox.margin>
+				</Button>
+			</children>
+		</VBox>
+	</children>
 </AnchorPane>
