--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Transport.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Transport.fxml
@@ -14,184 +14,245 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="700.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.TransportController">
-   <children>
-      <VBox fx:id="page" alignment="TOP_CENTER" layoutY="79.0" prefHeight="471.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="79.0">
-         <children>
-            <Label id="titre" alignment="CENTER" prefHeight="27.0" prefWidth="611.0" style="-fx-font-size: 20;" styleClass="titre" text="Moyen de transport autorisé">
-               <font>
-                  <Font size="18.0" />
-               </font>
-               <VBox.margin>
-                  <Insets top="25.0" />
-               </VBox.margin>
-            </Label>
-            <HBox alignment="CENTER" prefHeight="79.0" prefWidth="600.0">
-               <children>
-                  <RadioButton fx:id="voitureRadioBtn" mnemonicParsing="false" onAction="#VoitureSelectionne" selected="true" text="Voiture">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                     <toggleGroup>
-                        <ToggleGroup fx:id="moyenTransport" />
-                     </toggleGroup>
-                  </RadioButton>
-                  <RadioButton fx:id="trainRadioBtn" mnemonicParsing="false" onAction="#TrainSelectionne" text="Train" toggleGroup="$moyenTransport">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="20.0" right="20.0" />
-                     </HBox.margin>
-                  </RadioButton>
-                  <RadioButton fx:id="avionRadioBtn" mnemonicParsing="false" onAction="#AvionSelectionne" text="Avion" toggleGroup="$moyenTransport">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets right="20.0" />
-                     </HBox.margin>
-                  </RadioButton>
-                  <RadioButton fx:id="autreRadioBtn" mnemonicParsing="false" onAction="#autreSelectionne" text="Autre" toggleGroup="$moyenTransport">
-                     <font>
-                        <Font size="15.0" />
-                     </font></RadioButton>
-               </children>
-            </HBox>
-            <GridPane fx:id="detailsVoiture" prefHeight="144.0" prefWidth="700.0" vgap="20.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="476.0" minWidth="10.0" prefWidth="302.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="341.0" minWidth="10.0" prefWidth="300.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Label alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="477.0" text="Type :">
-                     <GridPane.margin>
-                        <Insets right="20.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <TextField fx:id="typeVoitureTextField" GridPane.columnIndex="1">
-                     <GridPane.margin>
-                        <Insets right="150.0" />
-                     </GridPane.margin>
-                  </TextField>
-                  <Label alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="380.0" text="N° Immatriculation :" GridPane.rowIndex="1">
-                     <GridPane.margin>
-                        <Insets right="20.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <TextField fx:id="immatriculationTextField" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                     <GridPane.margin>
-                        <Insets right="150.0" />
-                     </GridPane.margin>
-                  </TextField>
-                  <Label alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="393.0" text="Nombre de CV :" GridPane.rowIndex="2">
-                     <GridPane.margin>
-                        <Insets right="20.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <TextField fx:id="nbrCVTextField" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                     <GridPane.margin>
-                        <Insets right="150.0" />
-                     </GridPane.margin>
-                  </TextField>
-                  <RadioButton fx:id="vehiculeServiceRadioBtn" mnemonicParsing="false" prefHeight="19.0" prefWidth="253.0" text="Utilisation de véhicule de service" GridPane.rowIndex="3">
-                     <GridPane.margin>
-                        <Insets left="50.0" />
-                     </GridPane.margin>
-                     <toggleGroup>
-                        <ToggleGroup fx:id="utilisationVehicule" />
-                     </toggleGroup>
-                  </RadioButton>
-                  <RadioButton fx:id="vehiculePersoRadioBtn" mnemonicParsing="false" text="Utilisation du véhicule personnel" toggleGroup="$utilisationVehicule" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-               </children>
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-            </GridPane>
-            <HBox fx:id="trainClasseHBox" alignment="CENTER" prefHeight="50.0" prefWidth="600.0" spacing="15.0">
-               <children>
-                  <RadioButton fx:id="train1ereClasseRadioBtn" mnemonicParsing="false" text="1ère classe">
-                     <toggleGroup>
-                        <ToggleGroup fx:id="classeTrain" />
-                     </toggleGroup></RadioButton>
-                  <RadioButton fx:id="train2emeClasseRadioBtn" mnemonicParsing="false" text="2ème classe" toggleGroup="$classeTrain" />
-               </children>
-               <VBox.margin>
-                  <Insets bottom="25.0" />
-               </VBox.margin>
-            </HBox>
-            <VBox fx:id="cramcoVBox" prefWidth="100.0">
-               <children>
-                  <Label id="titre" alignment="CENTER" prefHeight="25.0" prefWidth="706.0" style="-fx-font-size: 20;" styleClass="titre" text="Billet pris par la C.R.A.M.C.O.">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets bottom="20.0" />
-                     </VBox.margin>
-                  </Label>
-                  <HBox alignment="CENTER" prefHeight="26.0" prefWidth="600.0" spacing="15.0">
-                     <children>
-                        <RadioButton fx:id="cramcoOuiRadioBtn" mnemonicParsing="false" text="Oui">
-                           <toggleGroup>
-                              <ToggleGroup fx:id="cramco" />
-                           </toggleGroup></RadioButton>
-                        <RadioButton fx:id="cramcoNonRadioBtn" mnemonicParsing="false" text="Non" toggleGroup="$cramco" />
-                     </children>
-                  </HBox>
-               </children>
-            </VBox>
-            <GridPane fx:id="detailsAutreTransport" prefHeight="25.0" prefWidth="400.0" vgap="20.0">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="476.0" minWidth="10.0" prefWidth="302.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="341.0" minWidth="10.0" prefWidth="300.0" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-               </rowConstraints>
-               <children>
-                  <Label alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="477.0" text="Préciser le moyen de transport :">
-                     <GridPane.margin>
-                        <Insets right="20.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <TextField fx:id="autreTransportTextField" prefHeight="27.0" prefWidth="161.0" GridPane.columnIndex="1">
-                     <GridPane.margin>
-                        <Insets right="150.0" />
-                     </GridPane.margin>
-                  </TextField>
-               </children>
-            </GridPane>
-            <HBox prefHeight="50.0" prefWidth="600.0" spacing="35.0">
-               <children>
-                  <Button mnemonicParsing="false" onAction="#retournerATypeOM" prefHeight="29.0" prefWidth="94.0" text="&lt;&lt; Retour">
-                     <HBox.margin>
-                        <Insets top="25.0" />
-                     </HBox.margin></Button>
-                  <Button fx:id="boutonSigner" mnemonicParsing="false" onAction="#signerOM" prefWidth="75.0" text="Signer">
-                     <HBox.margin>
-                        <Insets top="25.0" />
-                     </HBox.margin>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#validerOM" prefWidth="75.0" text="Valider">
-                     <HBox.margin>
-                        <Insets top="25.0" />
-                     </HBox.margin></Button>
-               </children>
-               <padding>
-                  <Insets left="200.0" top="10.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets top="25.0" />
-               </VBox.margin>
-            </HBox>
-         </children>
-      </VBox>
-   </children>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity"
+	minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0"
+	prefWidth="700.0" stylesheets="@../style.css"
+	xmlns="http://javafx.com/javafx/11.0.1"
+	xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.TransportController">
+	<children>
+		<VBox fx:id="page" alignment="TOP_CENTER" layoutY="79.0"
+			prefHeight="471.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0"
+			AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+			AnchorPane.topAnchor="79.0">
+			<children>
+				<Label id="titre" alignment="CENTER" prefHeight="27.0"
+					prefWidth="611.0" style="-fx-font-size: 20;" styleClass="titre"
+					text="Moyen de transport autorisé">
+					<font>
+						<Font size="18.0" />
+					</font>
+					<VBox.margin>
+						<Insets top="25.0" />
+					</VBox.margin>
+				</Label>
+				<HBox alignment="CENTER" prefHeight="79.0" prefWidth="600.0">
+					<children>
+						<RadioButton fx:id="voitureRadioBtn"
+							mnemonicParsing="false" onAction="#VoitureSelectionne"
+							selected="true" text="Voiture">
+							<font>
+								<Font size="15.0" />
+							</font>
+							<toggleGroup>
+								<ToggleGroup fx:id="moyenTransport" />
+							</toggleGroup>
+						</RadioButton>
+						<RadioButton fx:id="trainRadioBtn"
+							mnemonicParsing="false" onAction="#TrainSelectionne" text="Train"
+							toggleGroup="$moyenTransport">
+							<font>
+								<Font size="15.0" />
+							</font>
+							<HBox.margin>
+								<Insets left="20.0" right="20.0" />
+							</HBox.margin>
+						</RadioButton>
+						<RadioButton fx:id="avionRadioBtn"
+							mnemonicParsing="false" onAction="#AvionSelectionne" text="Avion"
+							toggleGroup="$moyenTransport">
+							<font>
+								<Font size="15.0" />
+							</font>
+							<HBox.margin>
+								<Insets right="20.0" />
+							</HBox.margin>
+						</RadioButton>
+						<RadioButton fx:id="autreRadioBtn"
+							mnemonicParsing="false" onAction="#autreSelectionne" text="Autre"
+							toggleGroup="$moyenTransport">
+							<font>
+								<Font size="15.0" />
+							</font>
+						</RadioButton>
+					</children>
+				</HBox>
+				<GridPane fx:id="detailsVoiture" prefHeight="144.0"
+					prefWidth="700.0" vgap="20.0">
+					<columnConstraints>
+						<ColumnConstraints hgrow="SOMETIMES"
+							maxWidth="476.0" minWidth="10.0" prefWidth="302.0" />
+						<ColumnConstraints hgrow="SOMETIMES"
+							maxWidth="341.0" minWidth="10.0" prefWidth="300.0" />
+					</columnConstraints>
+					<rowConstraints>
+						<RowConstraints minHeight="10.0" prefHeight="30.0"
+							vgrow="SOMETIMES" />
+						<RowConstraints minHeight="10.0" prefHeight="30.0"
+							vgrow="SOMETIMES" />
+						<RowConstraints minHeight="10.0" prefHeight="30.0"
+							vgrow="SOMETIMES" />
+						<RowConstraints minHeight="10.0" prefHeight="30.0"
+							vgrow="SOMETIMES" />
+					</rowConstraints>
+					<children>
+						<Label alignment="CENTER_RIGHT" prefHeight="17.0"
+							prefWidth="477.0" text="Type :">
+							<GridPane.margin>
+								<Insets right="20.0" />
+							</GridPane.margin>
+						</Label>
+						<TextField fx:id="typeVoitureTextField"
+							GridPane.columnIndex="1">
+							<GridPane.margin>
+								<Insets right="150.0" />
+							</GridPane.margin>
+						</TextField>
+						<Label alignment="CENTER_RIGHT" prefHeight="17.0"
+							prefWidth="380.0" text="N° Immatriculation :"
+							GridPane.rowIndex="1">
+							<GridPane.margin>
+								<Insets right="20.0" />
+							</GridPane.margin>
+						</Label>
+						<TextField fx:id="immatriculationTextField"
+							GridPane.columnIndex="1" GridPane.rowIndex="1">
+							<GridPane.margin>
+								<Insets right="150.0" />
+							</GridPane.margin>
+						</TextField>
+						<Label alignment="CENTER_RIGHT" prefHeight="17.0"
+							prefWidth="393.0" text="Nombre de CV :" GridPane.rowIndex="2">
+							<GridPane.margin>
+								<Insets right="20.0" />
+							</GridPane.margin>
+						</Label>
+						<TextField fx:id="nbrCVTextField"
+							GridPane.columnIndex="1" GridPane.rowIndex="2">
+							<GridPane.margin>
+								<Insets right="150.0" />
+							</GridPane.margin>
+						</TextField>
+						<RadioButton fx:id="vehiculeServiceRadioBtn"
+							mnemonicParsing="false" prefHeight="19.0" prefWidth="253.0"
+							text="Utilisation de véhicule de service" GridPane.rowIndex="3">
+							<GridPane.margin>
+								<Insets left="50.0" />
+							</GridPane.margin>
+							<toggleGroup>
+								<ToggleGroup fx:id="utilisationVehicule" />
+							</toggleGroup>
+						</RadioButton>
+						<RadioButton fx:id="vehiculePersoRadioBtn"
+							mnemonicParsing="false" text="Utilisation du véhicule personnel"
+							toggleGroup="$utilisationVehicule" GridPane.columnIndex="1"
+							GridPane.rowIndex="3" />
+					</children>
+					<VBox.margin>
+						<Insets />
+					</VBox.margin>
+				</GridPane>
+				<HBox fx:id="trainClasseHBox" alignment="CENTER"
+					prefHeight="50.0" prefWidth="600.0" spacing="15.0">
+					<children>
+						<RadioButton fx:id="train1ereClasseRadioBtn"
+							mnemonicParsing="false" text="1ère classe">
+							<toggleGroup>
+								<ToggleGroup fx:id="classeTrain" />
+							</toggleGroup>
+						</RadioButton>
+						<RadioButton fx:id="train2emeClasseRadioBtn"
+							mnemonicParsing="false" text="2ème classe"
+							toggleGroup="$classeTrain" />
+					</children>
+					<VBox.margin>
+						<Insets bottom="25.0" />
+					</VBox.margin>
+				</HBox>
+				<VBox fx:id="cramcoVBox" prefWidth="100.0">
+					<children>
+						<Label id="titre" alignment="CENTER" prefHeight="25.0"
+							prefWidth="706.0" style="-fx-font-size: 20;" styleClass="titre"
+							text="Billet pris par la C.R.A.M.C.O.">
+							<font>
+								<Font size="16.0" />
+							</font>
+							<VBox.margin>
+								<Insets bottom="20.0" />
+							</VBox.margin>
+						</Label>
+						<HBox alignment="CENTER" prefHeight="26.0" prefWidth="600.0"
+							spacing="15.0">
+							<children>
+								<RadioButton fx:id="cramcoOuiRadioBtn"
+									mnemonicParsing="false" text="Oui">
+									<toggleGroup>
+										<ToggleGroup fx:id="cramco" />
+									</toggleGroup>
+								</RadioButton>
+								<RadioButton fx:id="cramcoNonRadioBtn"
+									mnemonicParsing="false" text="Non" toggleGroup="$cramco" />
+							</children>
+						</HBox>
+					</children>
+				</VBox>
+				<GridPane fx:id="detailsAutreTransport" prefHeight="25.0"
+					prefWidth="400.0" vgap="20.0">
+					<columnConstraints>
+						<ColumnConstraints hgrow="SOMETIMES"
+							maxWidth="476.0" minWidth="10.0" prefWidth="302.0" />
+						<ColumnConstraints hgrow="SOMETIMES"
+							maxWidth="341.0" minWidth="10.0" prefWidth="300.0" />
+					</columnConstraints>
+					<rowConstraints>
+						<RowConstraints minHeight="10.0" prefHeight="30.0"
+							vgrow="SOMETIMES" />
+					</rowConstraints>
+					<children>
+						<Label alignment="CENTER_RIGHT" prefHeight="17.0"
+							prefWidth="477.0" text="Préciser le moyen de transport :">
+							<GridPane.margin>
+								<Insets right="20.0" />
+							</GridPane.margin>
+						</Label>
+						<TextField fx:id="autreTransportTextField"
+							prefHeight="27.0" prefWidth="161.0" GridPane.columnIndex="1">
+							<GridPane.margin>
+								<Insets right="150.0" />
+							</GridPane.margin>
+						</TextField>
+					</children>
+				</GridPane>
+				<HBox prefHeight="50.0" prefWidth="600.0" spacing="35.0">
+					<children>
+						<Button mnemonicParsing="false"
+							onAction="#retournerATypeOM" prefHeight="29.0" prefWidth="94.0"
+							text="&lt;&lt; Retour">
+							<HBox.margin>
+								<Insets top="25.0" />
+							</HBox.margin>
+						</Button>
+						<Button fx:id="boutonSigner" mnemonicParsing="false"
+							onAction="#signerOM" prefWidth="75.0" text="Signer">
+							<HBox.margin>
+								<Insets top="25.0" />
+							</HBox.margin>
+						</Button>
+						<Button mnemonicParsing="false" onAction="#validerOM"
+							prefWidth="75.0" text="Valider">
+							<HBox.margin>
+								<Insets top="25.0" />
+							</HBox.margin>
+						</Button>
+					</children>
+					<padding>
+						<Insets left="200.0" top="10.0" />
+					</padding>
+					<VBox.margin>
+						<Insets top="25.0" />
+					</VBox.margin>
+				</HBox>
+			</children>
+		</VBox>
+	</children>
 </AnchorPane>
