correction et modification XLS HT

--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/ItemHoraireTravail.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/ItemHoraireTravail.fxml
@@ -2,15 +2,13 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="itemHoraire" prefHeight="38.0" prefWidth="788.0"
-	stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1"
-	xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.ItemHoraireTravailController">
+<VBox fx:id="itemHoraire" prefHeight="38.0" prefWidth="788.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.ItemHoraireTravailController">
 	<children>
 		<HBox alignment="CENTER" prefHeight="43.0" prefWidth="788.0">
 			<children>
@@ -19,8 +17,7 @@
 						<Insets right="10.0" />
 					</HBox.margin>
 				</Label>
-				<TextField fx:id="heure1Deb" prefHeight="25.0"
-					prefWidth="28.0" text="0">
+				<TextField fx:id="heure1Deb" prefHeight="25.0" prefWidth="28.0" text="0">
 					<HBox.margin>
 						<Insets right="10.0" />
 					</HBox.margin>
@@ -30,8 +27,7 @@
 						<Insets right="10.0" />
 					</HBox.margin>
 				</Label>
-				<TextField fx:id="min1Deb" prefHeight="25.0"
-					prefWidth="28.0" text="00">
+				<TextField fx:id="min1Deb" prefHeight="25.0" prefWidth="28.0" text="00">
 					<HBox.margin>
 						<Insets right="10.0" />
 					</HBox.margin>
@@ -41,8 +37,7 @@
 						<Insets right="10.0" />
 					</HBox.margin>
 				</Label>
-				<TextField fx:id="heure1Fin" prefHeight="25.0"
-					prefWidth="28.0" text="0">
+				<TextField fx:id="heure1Fin" prefHeight="25.0" prefWidth="28.0" text="0">
 					<HBox.margin>
 						<Insets right="10.0" />
 					</HBox.margin>
@@ -52,18 +47,18 @@
 						<Insets right="10.0" />
 					</HBox.margin>
 				</Label>
-				<TextField fx:id="min1Fin" prefHeight="25.0"
-					prefWidth="28.0" text="00">
+				<TextField fx:id="min1Fin" prefHeight="25.0" prefWidth="28.0" text="00">
 					<HBox.margin>
-						<Insets right="50.0" />
+						<Insets right="30.0" />
 					</HBox.margin>
 				</TextField>
-				<Button fx:id="btnSupprimer" mnemonicParsing="false"
-					onAction="#supprimerHoraire" prefHeight="29.0" prefWidth="37.0"
-					style="-fx-font-weight: bold;" text="-" />
-				<Button mnemonicParsing="false" onAction="#ajoutHoraire"
-					prefHeight="29.0" prefWidth="37.0" style="-fx-font-weight: bold;"
-					text="+">
+            <CheckBox fx:id="checkTransport" mnemonicParsing="false" text="Trajet">
+               <HBox.margin>
+                  <Insets right="10.0" />
+               </HBox.margin>
+            </CheckBox>
+				<Button fx:id="btnSupprimer" mnemonicParsing="false" onAction="#supprimerHoraire" prefHeight="29.0" prefWidth="37.0" style="-fx-font-weight: bold;" text="-" />
+				<Button mnemonicParsing="false" onAction="#ajoutHoraire" prefHeight="29.0" prefWidth="37.0" style="-fx-font-weight: bold;" text="+">
 					<HBox.margin>
 						<Insets left="10.0" />
 					</HBox.margin>
