--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/JourHoraireTravail.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/JourHoraireTravail.fxml
@@ -6,20 +6,13 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="520.0" prefWidth="700.0"
-	stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1"
-	xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.JourHoraireTravailController">
+<AnchorPane prefHeight="520.0" prefWidth="700.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.JourHoraireTravailController">
 	<children>
-		<VBox alignment="TOP_CENTER" layoutY="64.0" prefHeight="456.0"
-			prefWidth="700.0">
+		<VBox alignment="TOP_CENTER" layoutY="64.0" prefHeight="456.0" prefWidth="700.0">
 			<children>
 				<HBox prefHeight="29.0" prefWidth="700.0">
 					<children>
@@ -28,8 +21,7 @@
 								<Insets left="20.0" />
 							</HBox.margin>
 						</Label>
-						<Label fx:id="dateJournee" style="-fx-font-weight: bold;"
-							text="12/34/5678">
+						<Label fx:id="dateJournee" style="-fx-font-weight: bold;" text="12/34/5678">
 							<font>
 								<Font name="System Bold" size="12.0" />
 							</font>
@@ -38,84 +30,37 @@
 				</HBox>
 				<ScrollPane prefHeight="218.0" prefWidth="723.0">
 					<content>
-						<VBox fx:id="listeHoraireVBox" prefHeight="219.0"
-							prefWidth="685.0" />
+						<VBox fx:id="listeHoraireVBox" prefHeight="219.0" prefWidth="685.0" />
 					</content>
 				</ScrollPane>
-				<GridPane prefHeight="128.0" prefWidth="700.0">
-					<columnConstraints>
-						<ColumnConstraints hgrow="SOMETIMES"
-							maxWidth="435.0" minWidth="10.0" prefWidth="298.0" />
-						<ColumnConstraints hgrow="SOMETIMES"
-							maxWidth="504.0" minWidth="10.0" prefWidth="402.0" />
-					</columnConstraints>
-					<rowConstraints>
-						<RowConstraints minHeight="10.0" prefHeight="30.0"
-							vgrow="SOMETIMES" />
-						<RowConstraints minHeight="10.0" prefHeight="30.0"
-							vgrow="SOMETIMES" />
-						<RowConstraints minHeight="10.0" prefHeight="30.0"
-							vgrow="SOMETIMES" />
-					</rowConstraints>
-					<children>
-						<Label text="Durée de trajet : " GridPane.rowIndex="1">
-							<GridPane.margin>
-								<Insets left="184.0" />
-							</GridPane.margin>
-						</Label>
-						<Label alignment="TOP_LEFT"
-							text="Moyen de transport(s) utilisé(s) sur place : ">
-							<GridPane.margin>
-								<Insets left="15.0" />
-							</GridPane.margin>
-						</Label>
-						<TextField fx:id="transportUtiliseSurPlace"
-							prefWidth="375.0" GridPane.columnIndex="1">
-							<GridPane.margin>
-								<Insets right="50.0" />
-							</GridPane.margin>
-						</TextField>
-						<Label alignment="CENTER_RIGHT" prefHeight="19.0"
-							prefWidth="291.0" text="Observations complémentaires :"
-							textAlignment="RIGHT" GridPane.rowIndex="2" />
-						<HBox alignment="CENTER_LEFT" prefHeight="100.0"
-							prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-							<children>
-								<TextField fx:id="dureeDuTrajetSurPlaceHeure"
-									alignment="CENTER" prefHeight="25.0" prefWidth="30.0" />
-								<Label text=":">
-									<HBox.margin>
-										<Insets left="10.0" right="10.0" />
-									</HBox.margin>
-								</Label>
-								<TextField fx:id="dureeTrajetSurPlaceMin"
-									prefWidth="30.0" />
-							</children>
-						</HBox>
-						<TextField fx:id="observation" GridPane.columnIndex="1"
-							GridPane.rowIndex="2">
-							<GridPane.margin>
-								<Insets right="50.0" />
-							</GridPane.margin>
-						</TextField>
-					</children>
-					<VBox.margin>
-						<Insets bottom="10.0" top="20.0" />
-					</VBox.margin>
-				</GridPane>
-				<HBox prefHeight="29.0" prefWidth="800.0">
-					<children>
-						<HBox prefHeight="29.0" prefWidth="400.0" />
-						<Button fx:id="boutonValider" mnemonicParsing="false"
-							onAction="#validerJournee" prefHeight="30.0" prefWidth="100.0"
-							text="Suivant &gt;&gt;">
-							<HBox.margin>
-								<Insets left="150.0" />
-							</HBox.margin>
-						</Button>
-					</children>
-				</HBox>
+            <HBox fx:id="hboxTransport" visible="false">
+               <children>
+                  <AnchorPane>
+                     <children>
+      						<Label alignment="TOP_LEFT" layoutX="34.0" layoutY="2.0" text="Moyen de transport(s) utilisé(s) sur place : " />
+      						<TextField fx:id="transportUtiliseSurPlace" layoutX="316.0" layoutY="-1.0" prefWidth="375.0" />
+                     </children>
+                  </AnchorPane>
+               </children>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox>
+               <children>
+                  <AnchorPane>
+                     <children>
+      						<Label alignment="CENTER_RIGHT" layoutX="-54.0" layoutY="3.0" prefHeight="19.0" prefWidth="291.0" text="Observations complémentaires :" textAlignment="RIGHT" />
+      						<TextField fx:id="observation" layoutX="316.0" layoutY="-1.0" />
+                     </children>
+                  </AnchorPane>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="20.0" top="20.0" />
+               </VBox.margin>
+            </HBox>
 			</children>
 		</VBox>
+						<Button fx:id="boutonValider" layoutX="540.0" layoutY="432.0" mnemonicParsing="false" onAction="#validerJournee" prefHeight="30.0" prefWidth="100.0" text="Suivant &gt;&gt;" />
 	</children>
 </AnchorPane>
